# system-lag-analysis

./: SKILL.md  pyproject.toml
agents/: openai.yaml
references/: methodology.md
scripts/: analyze_system_lag.py
tests/: test_documentation_constraints.py  test_plotly_outputs.py
