[project]
name = "system-lag-analysis"
version = "0.1.0"
description = "Lightweight system lag analysis for early prediction and control screening."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "plotly>=5.18",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
optuna = ["optuna>=3.5"]

[tool.uv]
package = false
